# cpp-fstring-examples

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
cmake/: CompilerSettings.cmake  CompilerWarnings.cmake  common.cmake  temp.cmake
coverage/: CMakeLists.txt
docs/pages/: about.dox
examples/: CMakeLists.txt
examples/psrc/: app_clipp.cpp  app_fixed_size_string_buffer.cpp  app_tinyply.cpp  class_basic.cpp  class_constructor.cpp  class_crtp.cpp  class_ctad.cpp  class_decltype.cpp  class_derived_basic.cpp  class_derived_template.cpp  class_include.cpp  class_include.h  class_iter.cpp  class_namespace1.cpp  class_namespace2.cpp  class_scope.cpp  class_template1.cpp  class_union.cpp  clipp.h  complex_clipp.cpp  demo_misc.cpp  enum_basic.cpp  enum_definition.cpp  enum_in_template.cpp  enum_include.cpp  enum_include.h  enum_namespace.cpp  fixed_size_string_buffer.h  tinyply.h
examples/src/: app_clipp.cpp  app_fixed_size_string_buffer.cpp  app_tinyply.cpp  class_basic.cpp  class_constructor.cpp  class_crtp.cpp  class_ctad.cpp  class_decltype.cpp  class_derived_basic.cpp  class_derived_template.cpp  class_include.cpp  class_include.h  class_iter.cpp  class_namespace1.cpp  class_namespace2.cpp  class_scope.cpp  class_template1.cpp  class_union.cpp  clipp.h  complex_clipp.cpp  demo_misc.cpp  enum_basic.cpp  enum_definition.cpp  enum_in_template.cpp  enum_include.cpp  enum_include.h  enum_namespace.cpp  fixed_size_string_buffer.h  tinyply.h
include/: fstr.h  utils.h
scripts/: remove_actions.bash
test/: CMakeLists.txt  test_fstring.py
test/psrc/: clipp.h  test_basic.cpp  test_class_basic.cpp  test_clipp_src.cpp  test_enum_basic.cpp
test/src/: clipp.h  run_all.cpp  test_basic.cpp  test_clang_src.cpp  test_class_basic.cpp  test_clipp_src.cpp  test_enum_basic.cpp
validate/: CMakeLists.txt
